# condor

./: .buildinfo  .gitignore  .gitlab-ci.yml  LICENSE  README.rst  casadi_backend.py  casadi_implementations.py  condor.py  genindex.html  high_bypass_turbofan.py  index.html  mwe_external.py  objects.inv  om-sellar-implicit.py  om-sellar.py  om_sellar_implicit.py  prototype_condor_sgm.py  py-modindex.html  pyproject.toml  run_examples.py  search.html  searchindex.js  sellar.py  sg_execution_times.html  shooting_gradient_method.py  sympy_backend.py  test_condor.py  test_sgm.py  test_sympy2casadi.py  upcycle.py  upcycle_combustor.py  upcycle_sellar.py
.github/workflows/: dist.yml  docs.yml  test.yml
_downloads/01e60acd6b04d3dbceb7929466596e9a/: state_switched.ipynb
_downloads/03d00c03e5bc06921fc259fc93b86796/: polar_transform.ipynb
_downloads/11cade0a4441c9029c53b2afa0c5eeee/: parallel_processing.ipynb
_sources/: sg_execution_times.rst.txt
_sources/api/: implementations.rst.txt
_static/: documentation_options.js
api/: backend.html  contrib.html  fields.html  implementations.html  index.html
design/: condor.pptx  prototype_condor_sgm.py
docs/: Makefile  api.rst  conf.py  design.rst  index.rst
examples/: LinCovCW.py  P_aug_0.mat  casadi_syntax.py  condor_sellar.py  condor_sellar_2.py  condor_sellar_3.py  ct_lqr.html  ct_lqr.py  custom_model_template_with_metaprogramming.html  custom_model_template_with_metaprogramming.py  deferred_model_test.py  deferred_user_test.py  explicit_system.py  external_solver.py  index.html  library.py  mwe_external.py  orbital_1.html  orbital_1.py  orbital_2.py  orbital_3.py  orbital_4.py  orbital_debugging.py  results  rosenbrock.html  rosenbrock.py  sellar.py  sg_execution_times.html  sgm_test_util.py  simple_parallel_processing.py  sp_lqr.html  sp_lqr.py  state_switched.html  state_switched.py  templating.html  test_model_api.py  test_sgm.py  test_tables.py  time_switch.html  time_switch.py
howto/: configuration.html  index.html  parallel_processing.html  sg_execution_times.html  table_basics.html
paper/: paper.md
tests/: test_algebraic_system.py  test_backends.py  test_external.py  test_external2.py  test_external_solver.py  test_model_api.py  test_model_config.py  test_operators.py  test_optimization.py  test_partial.py  test_placeholders.py  test_tablelookup.py  test_trajectory_analysis.py
topics/: design.html  glossary.html  index.html
tutorial/: index.html  polar_transform.html  sellar.html  sg_execution_times.html  trajectory.html
(+112 files in other folders)
