[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "condor"
description = "A package for disciplined systems modeling on a deadline"
readme = "README.rst"
dynamic = ["version"]
authors = [
    { name="Benjamin W. L. Margolis", email="benjamin.margolis@nasa.gov" },
    { name="Kenneth R. Lyons", email="kenneth.r.lyons@nasa.gov" },
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "scipy",
    "casadi",
    "ndsplines>=0.2.0post0",
]

[dependency-groups]
lint = ["ruff"]
test = ["pytest", "pytest-cov"]
docs = [
    "sphinx",
    "sphinx-gallery",
    "matplotlib",
    "furo",
]

[project.urls]
Documentation = "https://nasa.github.io/condor"

[tool.setuptools_scm]
write_to = "src/condor/_version.py"

[tool.ruff]
exclude = ["design/*"]

[tool.ruff.lint]
select = [
    "S", # flake8-bandit
    "B", # flake8-bugbear
    "EM", # flake8-errmsg
    "PT", # flake8-pytest-style
    "SIM", # flake8-simplify
    "I", # isort
    "NPY", # numpy-specific-rules
    # "N", # pep8-naming
    "PERF", # perflint
    "E","W", # pycodestyle
    # "D", # pydocstyle
    "F", # pyflakes
    # "PL", # pylint
    # "UP", # pyupgrade
    # "RUF", # ruff-specific-rules
]
ignore = [
    "F821", # Undefined name ..."
]

[tool.ruff.lint.per-file-ignores]
"docs/*" = [
    "E402", # Module level import not at top of file, ok in tutorials
    "E305", # Expected 2 blank lines afer class or function definition
    "S101", # asserts ok in doc examples
]
"tests/*" = [
    "F841", # Local variable assigned but never used, ok in smoke tests
    "S101", # asserts ok in tests
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
